Fix site description on mobile

--- a/style.scss
+++ b/style.scss
@@ -228,6 +228,7 @@ img {
   line-height: 0;
 
   @include mobile {
+    font-size: 12px;
     margin: 3px 0;
   }
 }
